--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,12 @@
 version: '3.7'
 services:
-    mariadb:
-        image: mariadb
-        container_name: my_mariadb
-        command: --default-authentication-plugin=mysql_native_password
-        environment:
-            MYSQL_DATABASE: 'db'
-            MYSQL_USER: 'adl'
-            MYSQL_PASSWORD: 'LinuxKU13!'
-            MYSQL_ROOT_PASSWORD: 'toor'
-        ports:
-            - "3307:3306"
-        volumes:
-            - "./data/db:/data/db"
-        networks:
-            - webnet
-        restart: always
-    api:
+    api2:
         build:
             context: ./api
             dockerfile: Dockerfile
-        container_name: be_api
+        container_name: be_api2
         ports:
-            - 9001:9001
+            - 9002:9002
         volumes:
             - "./api:/app"
         networks:
